Update and rename readme.md to readme.md.1
rename to .1 for First attempt

--- a/readme.md.1
+++ b/readme.md.1
@@ -1,4 +1,4 @@
-# Prox-Mac
+1# Prox-Mac
 My notes on creating a "reverse Hackintosh" on an original Mac Pro A1186
 
 1) First boot - got only a flashing white power light.
@@ -24,3 +24,5 @@ My notes on creating a "reverse Hackintosh" on an original Mac Pro A1186
 15) echo "deb [arch=amd64] http://download.proxmox.com/debian/pve bookworm pve-no-subscription" > /etc/apt/sources.list.d/pve-install-repo.list
 16) apt update && full-upgrade
 17) apt install pve-kernel-6.2
+
+After reboot - it doesn't boot anymore... I think its the removal of the non-free
